fix(playconsole): avoid whitespace collapse in logs

--- a/components/play-console/element.css
+++ b/components/play-console/element.css
@@ -29,7 +29,8 @@ li {
   }
 }
 
-code {
+pre {
+  display: inline-block;
   font-family: var(--font-family-code);
   tab-size: 4;
 }
